Pad the whole thing and align the arrow correctly.

--- a/styles/pull-request.less
+++ b/styles/pull-request.less
@@ -5,11 +5,17 @@
 @import "ui-variables";
 
 .pull-request {
+  padding: 15px;
   width: 500px;
 
   .target {
     margin-top: 10px;
     padding: 10px 20px;
+
+    span.icon-arrow-left {
+      margin-right: 0;
+      text-align: center;
+    }
   }
 
   ul.tab-list {
